    o #701588 by dereine: Delete button should say Revert on Overridden views.
    o #508124 by dereine: "accept_null" should have been "accept null" in boolean filter definitions.
    o #513396 by yhager: Attempt multi-byte safety for "trim at word boundary" setting.
    o #418230 by Scott Reynolds: Views adds wrong nid with "Node: Has new content".

  Other changes:
    o #570558 by yhahn: Segment default views caching to conserve memory used by Views during normal operation.
    o #661676 by dagmar: Improve error handling during AJAX failures.
    o #685622 by dereine: Field to provide link to a node revision.
    o #484600 by dereine: Ability to disable the automatic live preview.
    o #716236 by jmiccolis: Allow default menu tabs to also have menu entries.
    o #550132 by tha_sun: Allow plugins to better control the callbacks used for page type displays.
    o #548292 by mikeker: Create a "Node: path" field that can be used to display the aliased path to a node.
    o #666912 by dereine: Prevent imports of views created by newer, incompatible versions of Views.
    o #672864 by dereine: Add a column count class to the table style for themers to more easily do generic targeting.
    o #552498 by dereine: User email as an argument.
    o #515324 by dereine: Make API documentation easier to find.
    o #488314 by yhahn: Allow relationship to fetch nodes from terms.
    o #685938 by dereine: Sync preview widget to current tab to reduce WTFs when previewing the wrong display.
    o #739448 by brunodbo: Allow "Jump Menu" to set the "Choose" text in style options.

Views 2.8 (Dec 02, 2009)
  Bug fixes:
    o #622602: Missing ORDER BY in some views with tables due to incorrect test for default table sorting.
    o #623498 by marcp: total_rows should be filled in if fetching all records.
    o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.