@@ -50,6 +50,7 @@ Views 2.x-dev
     o #508124 by dereine: "accept_null" should have been "accept null" in boolean filter definitions.
     o #513396 by yhager: Attempt multi-byte safety for "trim at word boundary" setting.
     o #418230 by Scott Reynolds: Views adds wrong nid with "Node: Has new content".
+    o #558602 by dboulet and Crashtest_: Summary views should provide "active" class on links properly.
 
   Other changes:
     o #570558 by yhahn: Segment default views caching to conserve memory used by Views during normal operation.
